Add a standard Empty All Trash command to be used by mobile & desktop kmail.
svn path=/trunk/KDE/kdepimlibs/; revision=1175594

--- a/akonadi/kmime/CMakeLists.txt
+++ b/akonadi/kmime/CMakeLists.txt
@@ -49,6 +49,7 @@ set( kmimeakonadi_LIB_SRC
 
   commandbase.cpp
   util.cpp
+  emptytrashcommand.cpp
   markascommand.cpp
   movecommand.cpp
   movetotrashcommand.cpp
