Now agents no longer run in seperate processes per se, we need to deal with the fact the QDBusConnection is not thread save.
First step: Add the dbusconnectionpool (copied from kdelibs/nepomuk/core.
Next step: Replace all QBusConnection::sessionBus() with calls to the
           connection pool,

svn path=/trunk/KDE/kdepimlibs/; revision=1176361

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -81,6 +81,7 @@ set( akonadikde_LIB_SRC
   conflicthandling/conflicthandler.cpp
   conflicthandling/conflictresolvedialog.cpp
   control.cpp
+  dbusconnectionpool.cpp
   entitycache.cpp
   entitydisplayattribute.cpp
   entityhiddenattribute.cpp
