Introduce SharedValuePool, a little helper class that restores implicit sharing on objects that are received in great numbers but only with a small set of possible values. Use it for item mimetypes and flags, reducing their memory use from O(n) to O(1) for larger folder listings.
svn path=/trunk/KDE/kdepimlibs/; revision=1181945

--- a/akonadi/tests/CMakeLists.txt
+++ b/akonadi/tests/CMakeLists.txt
@@ -144,6 +144,7 @@ add_akonadi_test(collectionutilstest.cpp)
 add_akonadi_test(entitydisplayattributetest.cpp)
 add_akonadi_test(proxymodelstest.cpp)
 add_akonadi_test(actionstatemanagertest.cpp)
+add_akonadi_test(sharedvaluepooltest.cpp)
 
 # qtestlib tests that need non-exported stuff from akonadi-kde
 kde4_add_unit_test(resourceschedulertest TESTNAME akonadi-resourceschedulertest resourceschedulertest.cpp ../resourcescheduler.cpp)
