First ever unit test for IncidenceFormatter.
svn path=/trunk/KDE/kdepimlibs/kcalutils/tests/; revision=1182217

--- a/kcalutils/tests/CMakeLists.txt
+++ b/kcalutils/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ MACRO(KCALUTILS_UNIT_TESTS)
 ENDMACRO(KCALUTILS_UNIT_TESTS)
 
 KCALUTILS_UNIT_TESTS(
-  teststringify
   testdndfactory
+  testincidenceformatter
+  teststringify
 )
