Moved mbox library from kdepim to kdepimlibs
svn path=/trunk/KDE/kdepimlibs/; revision=1182360

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,6 +155,7 @@ if (NOT KDEPIM_ONLY_KLEO)
   add_subdirectory(kimap)
   add_subdirectory(kioslave)
   add_subdirectory(kldap)
+  add_subdirectory(kmbox)
 endif (NOT KDEPIM_ONLY_KLEO)
   add_subdirectory(kmime)
 if (NOT KDEPIM_ONLY_KLEO)
