--- a/KdepimLibsConfig.cmake.in
+++ b/KdepimLibsConfig.cmake.in
@@ -83,6 +83,7 @@ _kdepimlibs_set_lib_vars(KCALUTILS      kcalutils)
 _kdepimlibs_set_lib_vars(KHOLIDAYS      kholidays)
 _kdepimlibs_set_lib_vars(KIMAP          kimap)
 _kdepimlibs_set_lib_vars(KLDAP          kldap)
+_kdepimlibs_set_lib_vars(KMBOX          kmbox)
 _kdepimlibs_set_lib_vars(KMIME          kmime)
 _kdepimlibs_set_lib_vars(KONTACTINTERFACE kontactinterface)
 _kdepimlibs_set_lib_vars(KPIMIDENTITIES kpimidentities)
