--- a/kcal/local.desktop
+++ b/kcal/local.desktop
@@ -57,7 +57,7 @@ Comment[en_GB]=Provides access to a calendar stored in a single local file
 Comment[es]=Provee acceso a un calendario almacenado en un único archivo local
 Comment[et]=Võimaldab kasutada kohalikku faili salvestatud kalendrit
 Comment[fi]=Tarjoaa pääsyn yksittäiseen paikalliseen tiedostoon tallennettuun kalenteriin
-Comment[fr]=Fourni l'accès à un agenda stocké dans un fichier local
+Comment[fr]=Fournit l'accès à un agenda stocké dans un fichier local
 Comment[ga]=Soláthraíonn sé seo rochtain ar fhéilire stóráilte i gcomhad logánta amháin
 Comment[gl]=Dá acceso a un calendario gardado nun único ficheiro local
 Comment[hu]=Helyi fájlban tárolt naptár elérését biztosítja.
