SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.5/kdepimlibs/; revision=1185655

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -28,6 +28,7 @@ Name[sr@ijekavianlatin]=Brzoglasnički protokol K‑adresra
 Name[sr@latin]=Brzoglasnički protokol K‑adresra
 Name[sv]=Addressbokens direktmeddelandeprotokoll
 Name[th]=โพรโทคอลข้อความด่วนทันใจของสมุดที่อยู่-K
+Name[tr]=KAddressbook Anlık Mesajlaşma Protokolü
 Name[uk]=Протокол миттєвого обміну повідомленнями KAddressbook
 Name[wa]=Protocole di messaedjreye sol moumint di KAddressbook
 Name[x-test]=xxKAddressbook Instant Messaging Protocolxx
