--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -29,6 +29,7 @@ Comment[sr@ijekavianlatin]=Protokol Meanwhile
 Comment[sr@latin]=Protokol Meanwhile
 Comment[sv]=Meanwhile-protokoll
 Comment[th]=โพรโทคอล Meanwhile
+Comment[tr]=Aynı Zamanlı Protokol
 Comment[uk]=Протокол Meanwhile
 Comment[wa]=Protocole Meanwhile
 Comment[x-test]=xxMeanwhile Protocolxx
@@ -60,6 +61,7 @@ Name[sr@ijekavianlatin]=Meanwhile
 Name[sr@latin]=Meanwhile
 Name[sv]=Meanwhile
 Name[th]=Meanwhile
+Name[tr]=Aynı Zamanlı
 Name[uk]=Meanwhile
 Name[wa]=Meanwhile
 Name[x-test]=xxMeanwhilexx
