--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -30,6 +30,7 @@ Comment[sr@ijekavianlatin]=Protokol Jabber
 Comment[sr@latin]=Protokol Jabber
 Comment[sv]=Jabber-protokoll
 Comment[th]=โพรโทคอล Jabber
+Comment[tr]=Jabber Protokolü
 Comment[uk]=Протокол Jabber
 Comment[wa]=Protocole Jabber
 Comment[x-test]=xxJabber Protocolxx
@@ -62,6 +63,7 @@ Name[sr@ijekavianlatin]=Jabber
 Name[sr@latin]=Jabber
 Name[sv]=Jabber
 Name[th]=Jabber
+Name[tr]=Jabber
 Name[uk]=Jabber
 Name[wa]=Jabber
 Name[x-test]=xxJabberxx
