--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -29,6 +29,7 @@ Comment[sr@ijekavianlatin]=Protokol SMS
 Comment[sr@latin]=Protokol SMS
 Comment[sv]=SMS-protokoll
 Comment[th]=โพรโทคอล SMS
+Comment[tr]=SMS Protokolü
 Comment[uk]=Протокол SMS
 Comment[wa]=Protocole SMS
 Comment[x-test]=xxSMS Protocolxx
@@ -60,6 +61,7 @@ Name[sr@ijekavianlatin]=SMS
 Name[sr@latin]=SMS
 Name[sv]=SMS
 Name[th]=SMS
+Name[tr]=SMS
 Name[uk]=SMS
 Name[wa]=SMS
 Name[x-test]=xxSMSxx
