Disable Boost's autolinking for Windows CE
svn path=/trunk/KDE/kdepimlibs/; revision=1189325

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,7 @@ endif (KDEPIM_NO_KCAL)
 if(WINCE)
   set(STATIC_LIBRARY ON)
   add_definitions(-DKDELIBS_STATIC_LIBS)
+  add_definitions(-DBOOST_ALL_NO_LIB)
 endif(WINCE)
 
 if(STATIC_LIBRARY)
