SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.5/kdepimlibs/; revision=1192116

--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -9,6 +9,7 @@ Comment[ca@valencia]=MSN Messenger
 Comment[cs]=MSN Messenger
 Comment[da]=MSN Messenger
 Comment[de]=MSN-Nachrichtendienst
+Comment[el]=Αποστολέας Μηνυμάτων MSN
 Comment[en_GB]=MSN Messenger
 Comment[eo]=MSN Mesaĝilo
 Comment[es]=MSN Messenger
@@ -40,6 +41,7 @@ Name[ca@valencia]=MSN Messenger
 Name[cs]=MSN Messenger
 Name[da]=MSN Messenger
 Name[de]=MSN Messenger
+Name[el]=Αποστολέας Μηνυμάτων MSN
 Name[en_GB]=MSN Messenger
 Name[eo]=MSN mesaĝilo
 Name[es]=MSN Messenger
