--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -15,6 +15,7 @@ Name[ca@valencia]=Accions del contacte
 Name[cs]=Činnosti kontaktů
 Name[da]=Kontakthandlinger
 Name[de]=Kontakt-Aktionen
+Name[el]=Ενέργειες Επαφών
 Name[en_GB]=Contact Actions
 Name[es]=Acciones de contactos
 Name[et]=Kontaktitoimingud
@@ -51,6 +52,7 @@ Comment[ca@valencia]=Configura les accions del contacte
 Comment[cs]=Nastavit činnosti kontaktů
 Comment[da]=Indstil kontakthandlinger
 Comment[de]=Kontakt-Aktionen einrichten
+Comment[el]=Ρύθμιση των Ενεργειών Επαφών
 Comment[en_GB]=Configure the Contact Actions
 Comment[es]=Configurar las acciones de contactos
 Comment[et]=Kontaktitoimingute seadistamine
