--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -9,6 +9,7 @@ Comment[ca@valencia]=Protocol AIM
 Comment[cs]=Protokol AIM
 Comment[da]=AIM-protokollen
 Comment[de]=AIM-Protokoll
+Comment[el]=Πρωτόκολλο ΑΙΜ
 Comment[en_GB]=AIM Protocol
 Comment[eo]=AIM-Protokolo
 Comment[es]=Protocolo AIM
@@ -42,6 +43,7 @@ Name[ca@valencia]=AIM
 Name[cs]=AIM
 Name[da]=AIM
 Name[de]=AIM
+Name[el]=ΑΙΜ
 Name[en_GB]=AIM
 Name[eo]=AIM
 Name[es]=AIM
