--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -9,6 +9,7 @@ Comment[ca@valencia]=Protocol ICQ
 Comment[cs]=Protokol ICQ
 Comment[da]=ICQ-protokollen
 Comment[de]=ICQ-Protokoll
+Comment[el]=Πρωτόκολλο ICQ
 Comment[en_GB]=ICQ Protocol
 Comment[eo]=ICQ Protokolo
 Comment[es]=Protocolo ICQ
@@ -42,6 +43,7 @@ Name[ca@valencia]=ICQ
 Name[cs]=ICQ
 Name[da]=ICQ
 Name[de]=ICQ
+Name[el]=ICQ
 Name[en_GB]=ICQ
 Name[eo]=ICQ
 Name[es]=ICQ
