--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -9,6 +9,7 @@ Comment[ca@valencia]=Internet Relay Chat
 Comment[cs]=Internet Relay Chat
 Comment[da]=Internet Relay Chat
 Comment[de]=Internet Relay Chat
+Comment[el]=Internet Relay Chat
 Comment[en_GB]=Internet Relay Chat
 Comment[eo]=Interreta plusenda babilado
 Comment[es]=Internet Relay Chat
@@ -40,6 +41,7 @@ Name[ca@valencia]=IRC
 Name[cs]=IRC
 Name[da]=IRC
 Name[de]=IRC
+Name[el]=IRC
 Name[en_GB]=IRC
 Name[eo]=IRC
 Name[es]=IRC
