--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -9,6 +9,7 @@ Comment[ca@valencia]=Protocol Meanwhile
 Comment[cs]=Protokol Meanwhile
 Comment[da]=Meanwhile-protokollen
 Comment[de]=Meanwhile-Protokoll
+Comment[el]=Πρωτόκολλο Meanwhile
 Comment[en_GB]=Meanwhile Protocol
 Comment[eo]=Meanwhile Protokolo
 Comment[es]=Protocolo Meanwhile
@@ -41,6 +42,7 @@ Name[ca@valencia]=Meanwhile
 Name[cs]=Meanwhile
 Name[da]=Meanwhile
 Name[de]=Meanwhile
+Name[el]=Meanwhile
 Name[en_GB]=Meanwhile
 Name[eo]=Meanwhile
 Name[es]=Meanwhile
