--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -9,6 +9,7 @@ Comment[ca@valencia]=Telefonia d'Internet Skype
 Comment[cs]=Internetová telefonie Skype
 Comment[da]=Internettelefoni med Skype
 Comment[de]=Skype-Internettelefonie
+Comment[el]=Διαδικτυακή Τηλεφωνία Skype
 Comment[en_GB]=Skype Internet Telephony
 Comment[eo]=Skype Interreta Telefonado
 Comment[es]=Telefonía por internet de Skype
@@ -40,6 +41,7 @@ Name[ca@valencia]=Skype
 Name[cs]=Skype
 Name[da]=Skype
 Name[de]=Skype
+Name[el]=Skype
 Name[en_GB]=Skype
 Name[eo]=kype
 Name[es]=Skype
