Add NetworkAccessHelper class
This is a wrapper around NetworkingControl class from komo-kdelibs.
Implemented for Windows CE, does nothing on other platforms.

This is to prevent "#ifdef Q_OS_WINCE" spam in classes that make use of it.

svn path=/trunk/KDE/kdepimlibs/; revision=1192356

--- a/kpimutils/CMakeLists.txt
+++ b/kpimutils/CMakeLists.txt
@@ -8,14 +8,27 @@ add_subdirectory( tests )
 include_directories( ../kmime )
 
 set(kpimutils_LIB_SRCS
-   email.cpp emailvalidator.cpp linklocator.cpp spellingfilter.cpp kfileio.cpp processes.cpp)
+  email.cpp
+  emailvalidator.cpp
+  linklocator.cpp
+  spellingfilter.cpp
+  kfileio.cpp
+  processes.cpp
+)
+
+# network access helper
+if(WINCE)
+  set(kpimutils_LIB_SRCS ${kpimutils_LIB_SRCS} networkaccesshelper_wince.cpp)
+else(WINCE)
+  set(kpimutils_LIB_SRCS ${kpimutils_LIB_SRCS} networkaccesshelper_fake.cpp)
+endif(WINCE)
 
 kde4_add_library(kpimutils ${LIBRARY_TYPE} ${kpimutils_LIB_SRCS})
 
 target_link_libraries(kpimutils ${KDE4_KDEUI_LIBS} ${KDE4_KEMOTICONS_LIBS} kmime)
 
 if(WINCE)
-target_link_libraries(kpimutils ${WCECOMPAT_LIBRARIES} toolhelp)
+  target_link_libraries(kpimutils ${WCECOMPAT_LIBRARIES} ${KDE4_SOLID_LIBS} toolhelp)
 endif(WINCE)
 
 set_target_properties(kpimutils PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
@@ -32,4 +45,5 @@ install(FILES
   kfileio.h
   supertrait.h
   processes.h
+  networkaccesshelper.h
 DESTINATION ${INCLUDE_INSTALL_DIR}/kpimutils  COMPONENT Devel)
