Disable boost autolinking for all MSVC builds instead of just WINCE
svn path=/trunk/KDE/kdepimlibs/; revision=1195468

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,8 +131,11 @@ endif (KDEPIM_NO_KCAL)
 if(WINCE)
   set(STATIC_LIBRARY ON)
   add_definitions(-DKDELIBS_STATIC_LIBS)
-  add_definitions(-DBOOST_ALL_NO_LIB)
 endif(WINCE)
+
+if(MSVC)
+  add_definitions(-DBOOST_ALL_NO_LIB)
+endif(MSVC)
 
 if(STATIC_LIBRARY)
   set(LIBRARY_TYPE STATIC)
