- strip nepomuk some more for wince
svn path=/trunk/KDE/kdepimlibs/; revision=1198406

--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -120,8 +120,12 @@ target_link_libraries(akonadi-contact akonadi-kde
                                       kmime
                                       kpimutils
                                       ${KDE4_KDEUI_LIBS}
-                                      ${KDE4_KIO_LIBS}
+                                      ${KDE4_KIO_LIBS})
+if(NOT WINCE)
+target_link_libraries(akonadi-contact akonadi-kde
                                       ${NEPOMUK_LIBRARIES})
+endif(NOT WINCE)
+
 target_link_libraries(akonadi-contact LINK_INTERFACE_LIBRARIES
                                       akonadi-kde
                                       kabc
