- take out soprano some more
svn path=/trunk/KDE/kdepimlibs/; revision=1198497

--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -7,6 +7,12 @@ include_directories(
     ${SOPRANO_INCLUDE_DIR}
 )
 
+if (SopranoFOUND)
+  include_directories(
+      ${SOPRANO_INCLUDE_DIR}
+  )
+endif (SopranoFOUND)
+
 add_subdirectory(tests)
 add_subdirectory(kcm)
 add_subdirectory(editor/im)
