- wince compile fix
svn path=/trunk/KDE/kdepimlibs/; revision=1199273

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,9 +104,9 @@ if (NOT KDEPIM_ONLY_KLEO)
   else(NOT WINCE)
     macro_log_feature(Soprano_FOUND "Soprano" "Storage of semantic data" "http://soprano.sourceforge.net" FALSE "${SOPRANO_MIN_VERSION}" "")
   endif (NOT WINCE)
-  if (Soprano_FOUND)
+  if (Soprano_FOUND AND NOT WINCE)
   include(SopranoAddOntology)
-  endif (Soprano_FOUND)
+  endif (Soprano_FOUND AND NOT WINCE)
 
   find_package(Nepomuk)
   if (WINCE)
