Register MessageFolderAttribute with AttributeRegistrar
svn path=/trunk/KDE/kdepimlibs/; revision=1200967

--- a/akonadi/kmime/CMakeLists.txt
+++ b/akonadi/kmime/CMakeLists.txt
@@ -37,6 +37,7 @@ endmacro(add_resource_iface)
 
 set( kmimeakonadi_LIB_SRC 
   addressattribute.cpp
+  attributeregistrar.cpp
   specialmailcollections.cpp
   specialmailcollectionsrequestjob.cpp
   messagefolderattribute.cpp
