SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1201673

--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -85,7 +85,7 @@ Comment[nn]=Set opp KDE-ressursar
 Comment[pa]=KDE ਸਰੋਤ ਸੰਰਚਨਾ
 Comment[pl]=Konfiguruj zasoby KDE
 Comment[pt]=Configurar os Recursos do KDE
-Comment[pt_BR]=Configurar as fontes de dados do KDE
+Comment[pt_BR]=Configura as fontes de dados do KDE
 Comment[ro]=Configurare resurse KDE
 Comment[ru]=Настройка источников данных KDE
 Comment[se]=Heivet KDE-resurssaid
